# calgae

./: .gitignore  AGENT.md  README.md  kgen.trace.json.time-events.txt  kgen.trace.json.time-trace  temp_develop_README.md
.clinerules/: AGENT.md  clinerules.md  local_llm_cli_agent_discussion.md  reading_research.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
core/: Cargo.toml  build.rs
core/src/: agent.rs  cli.rs  inference.rs  lib.rs  main.rs  mojo_ffi.rs  zig_ffi.rs
docs/: architecture.md  reading_research.md
llm-compressor/: awq.py  awq_original.py
ml/codon/: awq_kernels.codon  kernel.codon  optimize.py
ml/mojo/: awq.mojo  awq_kernels.mojo  kernel.mojo  kernels.mojo  simple_opt.mojo
proof/: lake-manifest.json  lakefile.lean
proof/.lake/: lakefile.olean  lakefile.olean.trace
proof/src/: Correctness.lean  proof.lean
runtime/: build.zig
runtime/src/: quantizer.zig  runtime.zig
runtime/zig/: build.zig  test.c
runtime/zig/src/: llama_wrapper.zig  quantizer.zig  runtime.zig  zig_kernel.zig
scripts/: awq_quantize.sh  awq_tinyllama.py  build_all.sh  fetch_model.sh  run_cpu_llm.sh  setup_all.sh
