[package]
name = "calgae-core"
version = "0.1.0"
edition = "2024"

resolver = "2"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
once_cell = "1.19"

tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# Candle for lightweight inference on safetensors weights

candle-core = { version = "0.6.0", default-features = false, features = ["cpu", "safetensors"] }
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
hf-hub = "0.3.17"
tokenizers = "0.19.1"

num_cpus = "1.16"
half = { version = "2.4.0", default-features = false }

rand_distr = { version = "0.5.1", default-features = false }

thiserror = "2.0.16"

log = "0.4"

serde_json = "1.0.145"


serde = { version = "1.0", features = ["derive"] }

rand = "0.9.2"
futures = "0.3"
tempfile = "3.10"

[build-dependencies]
cc = { version = "1.1", features = ["parallel"] }
hf-hub = "0.4.3"
[[bin]]
name = "xtask"
path = "src/bin/xtask.rs"

[[bin]]
name = "calgae"
path = "src/main.rs"