[package]
name = "calgae"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
candle-datasets = "0.9.1"
tokenizers = "0.19"
rand = "0.9.2"
rand_distr = { version = "0.5.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Build dependencies
[build-dependencies]
cc = "1.0"

[[bin]]
name = "xtask"
path = "src/bin/xtask.rs"
